# better_option

./: .clang-format  CMakeLists.txt  README.md  license.txt  option.hpp  ref.hpp  void.hpp
include/: invoke_with.hpp  option.hpp  ref.hpp  result.hpp  tags.hpp  void.hpp
include/storage/: empty.hpp  generic.hpp  generic_option.hpp  generic_result.hpp  raw.hpp  ref.hpp  void.hpp
tests/: CMakeLists.txt  bench.cpp  test_option.cpp  test_result.cpp
